# meet-agent-repo

./: .env.example  .gitignore  DEMO_SCRIPT.md  PULL_REQUEST.md  README.md  RUNBOOK.md  firestore.rules
backend/: pyproject.toml
backend/agents/: brand_safety_agent.py  chat_reactor_agent.py  context_agent.py  controversy_detector_agent.py  engagement_optimizer_agent.py  expert_commentator_agent.py  heartbeat_agent.py  hype_agent.py  moderator_agent.py  research_agent.py
backend/bot/: discover_selectors.py  meet_bot.py  selectors.py
backend/orchestrator/: drainer.py  listeners.py  loop.py  main.py
backend/storage/: firestore_client.py
backend/tools/: google_search.py
backend/vision/: labeler.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  firebase.ts  index.css  vite-env.d.ts
frontend/src/components/: DashboardTab.tsx  DeployTab.tsx  IncidentFeed.tsx
scripts/: setup_gcp.sh
