[project]
name = "meet-agent-backend"
version = "0.1.0"
description = "Google Meet AI Agent backend: Playwright bot + Gemini agents + FastAPI orchestrator"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.6.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-vision>=3.7.0",
    "playwright>=1.45.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pillow>=10.2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
